--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,8 @@
 	<div class="container">
 		<p class="copy">
 			&copy; {{ site.time | date: '%Y' }}
-			<a href="http://brianmaierjr.com">Brian Maier Jr.</a> Powered by
-			<a href="http://jekyllrb.com">Jekyll</a>
+			<a href="https://blog.saddam.id"> The Quiet Explorer Jr.</a> by
+			<a href="https://saddam.id">Saddam Hussein</a>
 		</p>
 
 		<div class="footer-links">
