--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<p class="copy">
 			&copy; {{ site.time | date: '%Y' }}
-			<a href="https://blog.saddam.id"> The Quiet Explorer Jr.</a> by
+			<a href="https://blog.saddam.id"> The Quiet Explorer.</a> by
 			<a href="https://saddam.id">Saddam Hussein</a>
 		</p>
 
