--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,21 +8,22 @@ layout: default
       </div>
   {%- endif -%}
 
-  <div class="post-categories">
-  {% if post %}
-    {% assign categories = post.categories %}
-  {% else %}
-    {% assign categories = page.categories %}
-  {% endif %}
-  {% for category in categories %}
-  <a href="{{site.baseurl}}/categories/#{{category|slugize}}">{{category}}</a>
-  {% unless forloop.last %}&nbsp;{% endunless %}
-  {% endfor %}
-  </div>
-
   <header>
-    <h1 class="postTitle">{{ page.title }}</h1>
-    <p class="meta">{{ page.date | date: '%B %d, %Y' }} | <span class="time">{{ page.content | number_of_words | divided_by:180 }}</span> Minute Read</p>
+      <h1 class="postTitle">{{ page.title }}</h1>
+      <p class="meta">
+        {{ page.date | date: '%B %d, %Y' }} |
+        <span class="time">{{ page.content | number_of_words | divided_by:180 }}</span> Minute Read
+        {% if post %}
+          {% assign categories = post.categories %}
+        {% else %}
+          {% assign categories = page.categories %}
+        {% endif %}
+        Kategori =
+        {% for category in categories %}
+          <a href="{{site.baseurl}}/categories/#{{category|slugize}}">{{category}}</a>
+          {% unless forloop.last %}&nbsp;{% endunless %}
+        {% endfor %}
+      </p>
   </header>
 
   {{ content }}
