--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,13 +12,13 @@ layout: default
       <h1 class="postTitle">{{ page.title }}</h1>
       <p class="meta">
         {{ page.date | date: '%B %d, %Y' }} |
-        <span class="time">{{ page.content | number_of_words | divided_by:180 }}</span> Minute Read
+        <span class="time">{{ page.content | number_of_words | divided_by:180 }}</span> Minute Read |
         {% if post %}
           {% assign categories = post.categories %}
         {% else %}
           {% assign categories = page.categories %}
         {% endif %}
-        Kategori =
+        Kategori:
         {% for category in categories %}
           <a href="{{site.baseurl}}/categories/#{{category|slugize}}">{{category}}</a>
           {% unless forloop.last %}&nbsp;{% endunless %}
