Update header html

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
                 </li>
                 {%- if link.title == 'Categories' -%}
                     <li class="element">
-                        <a href="{{ '/categories/' | relative_url }}">Kategori</a>
+                        <a href="{{ '/categories/' | relative_url }}">Category</a>
                     </li>
                 {%- endif -%}
                 {%- endfor -%}
