--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,7 @@
                     </li>
                 {%- endif -%}
                 {%- endfor -%}
+                <li> <a href="https://blog.saddam.id" target="_blank">Category</a></li>
                 <li> <a href="https://saddam.id" target="_blank">Main Site</a></li>
             </ul>
         </nav>
