--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,9 @@
                     </li>
                 {%- endif -%}
                 {%- endfor -%}
-                <li> <a href="https://blog.saddam.id/categories/" target="_blank">Category</a></li>
+                <li> <a href="https://blog.saddam.id/categories/#Cerita" target="_blank">Cerita</a></li>
+                <li> <a href="https://blog.saddam.id/categories/#Pikiran" target="_blank">Pikiran</a></li>
+                <li> <a href="https://blog.saddam.id/categories/#Karya" target="_blank">Karya</a></li>
                 <li> <a href="https://saddam.id" target="_blank">Main Site</a></li>
             </ul>
         </nav>
