--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,6 +24,7 @@ layout: default
           {% unless forloop.last %}&nbsp;{% endunless %}
         {% endfor %}
       </p>
+      <p class="meta">Written by: <a href="https://saddam.id" target="_blank">Saddam Hussein</a></p>
   </header>
 
   {{ content }}
